--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,13 +17,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
+
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile project(':SlidingMenuLibrary')
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.jiechic.library:xUtils:2.6.14'
+    compile files('C:/Users/10319/AndroidStudioProjects/NewsApp/library/libs/gson-2.3.1.jar')
+    compile files('C:/Users/10319/AndroidStudioProjects/NewsApp/library/libs/xUtils-2.6.14.jar')
 }
