完成从服务器获取json数据显示左侧菜单栏并缓存本地，初步实现获取新闻页签下的轮播图数据的获取

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity android:name=".activity.GuideActivity">
         </activity>
-        <activity android:name=".activity.HomeActivity">
+        <activity android:name=".activity.HomeActivity"
+            android:theme="@style/Theme.PageIndicatorDefaults_edit">
         </activity>
     </application>
 
