--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,6 @@ android {
 }
 
 dependencies {
-
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile project(':SlidingMenuLibrary')
@@ -30,4 +29,5 @@ dependencies {
     compile 'com.jiechic.library:xUtils:2.6.14'
     compile files('C:/Users/10319/AndroidStudioProjects/NewsApp/library/libs/gson-2.3.1.jar')
     compile files('C:/Users/10319/AndroidStudioProjects/NewsApp/library/libs/xUtils-2.6.14.jar')
+    compile project(':viewPageIndicator_library')
 }
